--- a/image-editor/style.css
+++ b/image-editor/style.css
@@ -16,3 +16,12 @@ body {
   width: 100%;
   height: 100%;
 }
+
+html {
+  font-size: 14px;
+}
+
+body {
+  background: #212121;
+  color: #a2a2a2;
+}
