--- a/image-editor/style.css
+++ b/image-editor/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300);
 
 * {
   margin: 0;
@@ -19,9 +20,15 @@ body {
 
 html {
   font-size: 14px;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #212121;
   color: #a2a2a2;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
 }
